DTSPB-4034 Deceased will name Spike