@@ -1455,14 +1455,19 @@ public class CallbackResponseTransformer {
             }
         }
 
-        List<CollectionMember<AliasName>> deceasedAliasNames = EMPTY_LIST;
+        List<CollectionMember<AliasName>> deceasedAliasNames = new ArrayList<>();
+        if (caseData.getDeceasedAliasFirstNameOnWill() != null && caseData.getDeceasedAliasLastNameOnWill() != null) {
+            deceasedAliasNames.add(new CollectionMember<>(null, AliasName.builder()
+                    .solsAliasname(caseData.getDeceasedAliasFirstNameOnWill() + " "
+                            + caseData.getDeceasedAliasLastNameOnWill()).build()));
+        }
         if (caseData.getDeceasedAliasNameList() != null) {
-            deceasedAliasNames = caseData.getDeceasedAliasNameList()
+            deceasedAliasNames.addAll(caseData.getDeceasedAliasNameList()
                     .stream()
                     .map(CollectionMember::getValue)
                     .map(this::buildDeceasedAliasNameExecutor)
                     .map(alias -> new CollectionMember<>(null, alias))
-                    .collect(Collectors.toList());
+                    .toList());
         }
         if (deceasedAliasNames.isEmpty()) {
             builder
@@ -1485,19 +1490,19 @@ public class CallbackResponseTransformer {
                 .primaryApplicantAlias(caseData.getPrimaryApplicantAlias())
                 .solsExecutorAliasNames(caseData.getSolsExecutorAliasNames());
 
-        List<CollectionMember<AliasName>> deceasedAliasNames = EMPTY_LIST;
+        List<CollectionMember<AliasName>> deceasedAliasNames = new ArrayList<>();
         if (caseData.getDeceasedAliasFirstNameOnWill() != null && caseData.getDeceasedAliasLastNameOnWill() != null) {
             deceasedAliasNames.add(new CollectionMember<>(null, AliasName.builder()
                     .solsAliasname(caseData.getDeceasedAliasFirstNameOnWill() + " "
                             + caseData.getDeceasedAliasLastNameOnWill()).build()));
-            if (caseData.getDeceasedAliasNameList() != null) {
-                deceasedAliasNames.addAll(caseData.getDeceasedAliasNameList()
-                        .stream()
-                        .map(CollectionMember::getValue)
-                        .map(this::buildDeceasedAliasNameExecutor)
-                        .map(alias -> new CollectionMember<>(null, alias))
-                        .toList());
-            }
+        }
+        if (caseData.getDeceasedAliasNameList() != null) {
+            deceasedAliasNames.addAll(caseData.getDeceasedAliasNameList()
+                    .stream()
+                    .map(CollectionMember::getValue)
+                    .map(this::buildDeceasedAliasNameExecutor)
+                    .map(alias -> new CollectionMember<>(null, alias))
+                    .toList());
         }
         if (deceasedAliasNames.isEmpty()) {
             builder
